{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 11,
  "lineage": "4104bf3b-693d-8776-ca37-eca0b5c6e85f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936688029763:network-acl/acl-0833e2a8f43d8c731",
            "default_network_acl_id": "acl-0833e2a8f43d8c731",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0833e2a8f43d8c731",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "936688029763",
            "subnet_ids": [],
            "tags": {
              "Name": "my-vpc-2-default"
            },
            "tags_all": {
              "Name": "my-vpc-2-default"
            },
            "vpc_id": "vpc-0fa600c1b3e42deac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936688029763:route-table/rtb-096ed2cc254f474e0",
            "default_route_table_id": "rtb-096ed2cc254f474e0",
            "id": "rtb-096ed2cc254f474e0",
            "owner_id": "936688029763",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-2-default"
            },
            "tags_all": {
              "Name": "my-vpc-2-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0fa600c1b3e42deac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936688029763:security-group/sg-0abe156e2338600f5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0abe156e2338600f5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "936688029763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-2-default"
            },
            "tags_all": {
              "Name": "my-vpc-2-default"
            },
            "vpc_id": "vpc-0fa600c1b3e42deac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936688029763:vpc/vpc-0fa600c1b3e42deac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0833e2a8f43d8c731",
            "default_route_table_id": "rtb-096ed2cc254f474e0",
            "default_security_group_id": "sg-0abe156e2338600f5",
            "dhcp_options_id": "dopt-045f40e33d66bd514",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fa600c1b3e42deac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096ed2cc254f474e0",
            "owner_id": "936688029763",
            "tags": {
              "Name": "my-vpc-2"
            },
            "tags_all": {
              "Name": "my-vpc-2"
            }
          }
        }
      ]
    }
  ]
}